# CoNNear_cochlea-PyTorch

./: .gitignore  README.md  connear_conversion.py  connear_notebook.ipynb  connear_notebook_light.ipynb  connear_pytorch.py  convert_keras_to_pytorch.py  helper_ops.py  pyproject.toml  test_load.py
tlmodel/: cochlea_utils.c  cochlear_model.py  connear_notebook.ipynb  get_tl_vbm_and_oae.py  solve_one_cochlea.py
