[project]
name = "connear-cochlea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "h5py>=3.16.0",
    "matplotlib>=3.11.0",
    "numpy>=2.4.6",
    "scipy>=1.18.0",
    "torch>=2.12.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
